--- a/AAUsidebar_v1.3.0/AAUsidebartheme.tex
+++ b/AAUsidebar_v1.3.0/AAUsidebartheme.tex
@@ -49,7 +49,7 @@
 
 \author[Frederico Durão] % optional, use only with lots of authors
 {
-  Frederico Durão\\
+  Profº Frederico Durão\\
   \href{mailto:freddurao@dcc.ufba.br}{{\tt freddurao@dcc.ufba.br}}
 }
 % - Give the names in the same order as they appear in the paper.
@@ -57,14 +57,15 @@
 %   affiliation. See the beamer manual for an example
 
 \institute[
-%  {\includegraphics[scale=0.2]{aau_segl}}\\ %insert a company, department or university logo
-  Dept.\ de Ciência da Computação\\
-  UFBA\\
+  {\includegraphics[scale=0.2]{AAUgraphics/logodcc}}\\ %insert a company, department or university logo
+%  Dept.\ de Ciência da Computação\\
+ % UFBA\\
 
 ] % optional - is placed in the bottom of the sidebar on every slide
 {% is placed on the title page
+  Instituto de Matemática\\
   Departamento de Ciência da Computação\\
-  UFBA\\
+  Universidade Federal da Bahia\\
 
   
   %there must be an empty line above this line - otherwise some unwanted space is added between the university and the country (I do not know why;( )
@@ -73,7 +74,7 @@
 
 % specify a logo on the titlepage (you can specify additional logos an include them in 
 % institute command below
-\pgfdeclareimage[height=1.5cm]{titlepagelogo}{AAUgraphics/aau_logo_new} % placed on the title page
+\pgfdeclareimage[height=3cm]{titlepagelogo}{AAUgraphics/aau_logo_new} % placed on the title page
 %\pgfdeclareimage[height=1.5cm]{titlepagelogo2}{graphics/aau_logo_new} % placed on the title page
 \titlegraphic{% is placed on the bottom of the title page
   \pgfuseimage{titlepagelogo}
